tests/datakinds/should_compile/DataKind3.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE PolyKinds #-}
module DataKind3 where

data kind Foo a = Bar a
